--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,24 +8,24 @@ bind-key C-a last-window
 set -g base-index 1
  
 # Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+#set-window-option -g automatic-rename on
+#set-option -g set-titles on
  
-#set -g default-terminal screen-256color
+set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
  
 setw -g mode-keys vi
 #setw -g mode-mouse on
-setw -g monitor-activity on
+#setw -g monitor-activity on
  
 bind-key v split-window -h
 bind-key s split-window -v
  
-#bind-key J resize-pane -D 5
-#bind-key K resize-pane -U 5
-#bind-key H resize-pane -L 5
-#bind-key L resize-pane -R 5
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
  
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
@@ -60,18 +60,13 @@ set -sg escape-time 0
 # Reload key
 bind r source-file ~/.tmux.conf
  
-set -g default-terminal "screen-256color"
-set -g history-limit 10000
- 
- 
 # THEME
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
- 
-# set correct term
-set -g default-terminal screen-256color
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
+# Center the window list
+set -g status-justify centre
