--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 unbind C-b
 unbind l
 set -g prefix C-a
+bind-key a  send-prefix
 bind-key C-a last-window
 
 # 0 is too far from ` ;)
@@ -13,60 +14,34 @@ set -g base-index 1
  
 set -g default-terminal screen-256color
 set -g status-keys vi
+setw -g mode-keys vi
+set-window-option -g mode-keys vi
 set -g history-limit 10000
  
-setw -g mode-keys vi
 #setw -g mode-mouse on
 #setw -g monitor-activity on
- 
-bind-key v split-window -h
-bind-key s split-window -v
- 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
- 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
- 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
- 
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
- 
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
- 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
- 
-# No delay for escape key press
-set -sg escape-time 0
- 
-# Reload key
-bind r source-file ~/.tmux.conf
- 
-# THEME
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
-#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
-# Center the window list
-set -g status-justify centre
+set -g status off
+set -g set-titles off
+#Allows for faster key repetition
+set -s escape-time 0
+
+#Linux clipboard support
+#bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
+#bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
+bind y run "tmux save-buffer - | xsel -i -b && xsel -o -b | xsel -i -p"
+
+#clear both screen and history
+bind -n C-l send-keys C-l \; run 'tmux clear-history'
+
+#the following vi-copy bindings match my vim settings
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+# see https://github.com/gpakosz/.vim.git
+#bind -t vi-copy v begin-selection
+#bind -t vi-copy C-v rectangle-toggle
+#bind -t vi-copy y copy-selection
+#bind -t vi-copy Escape cancel
+#bind -t vi-copy H start-of-line
+#bind -t vi-copy L end-of-line
+
