script auto push

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,47 +1,51 @@
-# Make it use C-a, similar to screen..
+# 0 is too far from ` ;)
+set -g base-index 1
+
+# Make it use C-a, similar to gnu-screen
 unbind C-b
 unbind l
 set -g prefix C-a
 bind-key a  send-prefix
 bind-key C-a last-window
 
-# 0 is too far from ` ;)
-set -g base-index 1
- 
-# Automatically set window title
-#set-window-option -g automatic-rename on
-#set-option -g set-titles on
- 
 set -g default-terminal screen-256color
+#set -g default-terminal "xterm"
 set -g status-keys vi
+set -g history-limit 10000
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
-set -g history-limit 10000
- 
-#setw -g mode-mouse on
+set-window-option -g automatic-rename off
+set-option -g allow-rename off
+#set-option -g display-time 2000
+#set-option -g pane-active-border-bg colour240
+#set-option -g status-utf8 on
+#set-option -g visual-activity on
+
+setw -g mode-mouse on
 #setw -g monitor-activity on
+#set -g mouse-resize-pane on
+set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 set -g status off
 set -g set-titles off
 #Allows for faster key repetition
-set -s escape-time 0
-
-#Linux clipboard support
-#bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
-#bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
-bind y run "tmux save-buffer - | xsel -i -b && xsel -o -b | xsel -i -p"
+set -sg escape-time 0
 
 #clear both screen and history
 bind -n C-l send-keys C-l \; run 'tmux clear-history'
 
-#the following vi-copy bindings match my vim settings
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-# see https://github.com/gpakosz/.vim.git
-#bind -t vi-copy v begin-selection
-#bind -t vi-copy C-v rectangle-toggle
-#bind -t vi-copy y copy-selection
-#bind -t vi-copy Escape cancel
-#bind -t vi-copy H start-of-line
-#bind -t vi-copy L end-of-line
+# select-pane like vi
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
 
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+bind -n M-m resize-pane -Z \
+
+unbind p
