--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,7 @@ set -g set-titles off
 set -sg escape-time 0
 
 #clear both screen and history
-#bind -n C-l send-keys C-l \; run 'tmux clear-history'
-bind C-l send-keys 'C-l' \; run 'tmux clear-history'
+bind -n C-l send-keys C-l \; run 'tmux clear-history'
 
 ## select-pane like vi
 #bind h select-pane -L
@@ -47,13 +46,15 @@ bind C-l send-keys 'C-l' \; run 'tmux clear-history'
 #bind -n M-j select-pane -D
 #bind -n M-k select-pane -U
 #bind -n M-l select-pane -R
-#bind -n M-m resize-pane -Z \
+
+#maximizing and restoring panes.
+bind -n M-m resize-pane -Z \
 
 # Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(g)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(g)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(g)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(g)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(g)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 unbind p
