--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ set -g set-titles off
 set -sg escape-time 0
 
 #clear both screen and history
-bind -n C-l send-keys C-l \; run 'tmux clear-history'
+bind C-l send-keys C-l \; run 'tmux clear-history'
 
 ## select-pane like vi
 #bind h select-pane -L
