--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# 0 is too far from ` ;)
-set -g base-index 1
-
 # Make it use C-a, similar to gnu-screen
 unbind C-b
 unbind l
@@ -8,10 +5,17 @@ set -g prefix C-a
 bind-key a  send-prefix
 bind-key C-a last-window
 
+set -g renumber-windows on
+# 0 is too far from ` ;)
+set-option -g base-index 1
+setw -g pane-base-index 1
+#Allows for faster key repetition
+set -sg escape-time 0
+
 set -g default-terminal screen-256color
 #set -g default-terminal "xterm"
 set -g status-keys vi
-set -g history-limit 2000
+set -g history-limit 8000
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
@@ -29,8 +33,6 @@ set -g mouse-select-pane on
 
 set -g status off
 set -g set-titles off
-#Allows for faster key repetition
-set -sg escape-time 0
 
 #clear both screen and history
 bind C-l send-keys C-l \; run 'tmux clear-history'
