--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ setw -g pane-base-index 1
 #Allows for faster key repetition
 set -sg escape-time 0
 
-set -g default-terminal screen-256color
+set -g default-terminal "screen-256color"
 #set -g default-terminal "xterm"
 set -g status-keys vi
 set -g history-limit 8000
@@ -21,7 +21,7 @@ set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
 #set-option -g display-time 2000
-#set-option -g pane-active-border-bg colour240
+#set-option -g pane-active-border-bg colour244
 #set-option -g status-utf8 on
 #set-option -g visual-activity on
 
@@ -53,10 +53,19 @@ bind C-l send-keys C-l \; run 'tmux clear-history'
 bind -n M-m resize-pane -Z \
 
 # Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+#
+# If using neovim
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 unbind p
+
+run-shell ~/tools/tmux-resurrect/resurrect.tmux
