--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,6 @@ set -g status-keys vi
 set -g history-limit 8000
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
 #set-option -g display-time 2000
 #set-option -g pane-active-border-bg colour244
 #set-option -g status-utf8 on
@@ -30,13 +28,40 @@ setw -g mode-mouse on
 #set -g mouse-resize-pane on
 set -g mouse-select-pane on
 #set -g mouse-select-window on
-
 set -g status off
-set -g set-titles off
 
 #clear both screen and history
 bind C-l send-keys C-l \; run 'tmux clear-history'
 
+#maximizing and restoring panes.
+bind -n M-m resize-pane -Z \
+
+
+####################################################
+# set terminal title
+# disable
+#set-window-option -g automatic-rename off
+#set-option -g allow-rename off
+
+# Turn on window titles
+set -g set-titles on
+
+# Set window title string
+#  #H  Hostname of local host
+#  #I  Current window index
+#  #P  Current pane index
+#  #S  Session name
+#  #T  Current window title
+#  #W  Current window name
+#  #   A literal ‘#’
+set -g set-titles-string '#S:#I.#P #W'
+
+# Automatically set window title
+setw -g automatic-rename
+####################################################
+
+####################################################
+# Smart pane switching with awareness of vim splits
 ## select-pane like vi
 #bind h select-pane -L
 #bind j select-pane -D
@@ -49,22 +74,18 @@ bind C-l send-keys C-l \; run 'tmux clear-history'
 #bind -n M-k select-pane -U
 #bind -n M-l select-pane -R
 
-#maximizing and restoring panes.
-bind -n M-m resize-pane -Z \
-
-# Smart pane switching with awareness of vim splits
 #bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
 #bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
 #bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
 #bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-#
 # If using neovim
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+####################################################
 
 unbind p
 
