--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ setw -g pane-base-index 1
 #Allows for faster key repetition
 set -sg escape-time 0
 
+set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 #set -g default-terminal "xterm"
 set -g status-keys vi
