--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 #Allows for faster key repetition
 set -sg escape-time 0
-
+set -g wrap-search off
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 #set -g default-terminal "xterm"
@@ -63,31 +63,55 @@ setw -g automatic-rename
 
 ####################################################
 # Smart pane switching with awareness of vim splits
-## select-pane like vi
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
+# select-pane like vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-## Use Alt-vim keys without prefix key to switch panes
-#bind -n M-h select-pane -L
-#bind -n M-j select-pane -D
-#bind -n M-k select-pane -U
-#bind -n M-l select-pane -R
-
-#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
-#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-# If using neovim
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+### Use Alt-vim keys without prefix key to switch panes
+##bind -n M-h select-pane -L
+##bind -n M-j select-pane -D
+##bind -n M-k select-pane -U
+##bind -n M-l select-pane -R
+#
+## If vim
+##bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
+##bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
+##bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
+##bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
+##bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+## If neovim
+#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 ####################################################
 
 unbind p
 
-run-shell ~/tools/tmux-resurrect/resurrect.tmux
+#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+#run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
+set -g @continuum-restore 'on'
+
+# Install
+# 1. git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# 2. Add the following into the bottom of our tmux.conf
+# 3. tmux kill-server
+# 4. tmux source ~/.tmux.conf
+# 5. Hit prefix + I (I as in Install) to fetch the plugin
+#
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
