split tmux+vim-window switch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,6 +102,11 @@ set -g @continuum-restore 'on'
 # 4. tmux source ~/.tmux.conf
 # 5. Hit prefix + I (I as in Install) to fetch the plugin
 #
+# Keys:
+# prefix + I          <<< install
+# prefix + U          <<< update
+# prefix + alt + u    <<< remove the deleted plugins
+#
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
