--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,20 @@ bind C-l send-keys C-l \; run 'tmux clear-history'
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
 
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind-key -n M-1 select-pane -t 1
+bind-key -n M-2 select-pane -t 2
+bind-key -n M-3 select-pane -t 3
+bind-key -n M-4 select-pane -t 4
+bind-key -n M-5 select-pane -t 5
+bind-key -n M-6 select-pane -t 6
+bind-key -n M-7 select-pane -t 7
+bind-key -n M-8 select-pane -t 8
+bind-key -n M-9 select-pane -t 9
 
 ####################################################
 # set terminal title
