--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ bind C-l send-keys C-l \; run 'tmux clear-history'
 
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
-
+# Should diable gnu-terminal's shortkey Alt+num
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
