--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 unbind C-b
 unbind l
 set -g prefix C-a
-bind-key a  send-prefix
-bind-key C-a last-window
+bind a  send-prefix
+bind C-a last-window
 
 set -g renumber-windows on
 # 0 is too far from ` ;)
@@ -32,7 +32,7 @@ set -g mouse-select-pane on
 set -g status off
 
 #clear both screen and history
-bind C-l send-keys C-l \; run 'tmux clear-history'
+bind -n C-c send-keys C-l \; run 'tmux clear-history'
 
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
@@ -42,15 +42,20 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind-key -n M-1 select-pane -t 1
-bind-key -n M-2 select-pane -t 2
-bind-key -n M-3 select-pane -t 3
-bind-key -n M-4 select-pane -t 4
-bind-key -n M-5 select-pane -t 5
-bind-key -n M-6 select-pane -t 6
-bind-key -n M-7 select-pane -t 7
-bind-key -n M-8 select-pane -t 8
-bind-key -n M-9 select-pane -t 9
+#bind -n C-h select-pane -L
+#bind -n C-j select-pane -D
+#bind -n C-k select-pane -U
+#bind -n C-l select-pane -R
+
+bind -n M-1 select-pane -t 1
+bind -n M-2 select-pane -t 2
+bind -n M-3 select-pane -t 3
+bind -n M-4 select-pane -t 4
+bind -n M-5 select-pane -t 5
+bind -n M-6 select-pane -t 6
+bind -n M-7 select-pane -t 7
+bind -n M-8 select-pane -t 8
+bind -n M-9 select-pane -t 9
 
 ####################################################
 # set terminal title
