update tmux Ctrl-C -> Ctrl-X

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,16 @@
+# Help:
+# tmux ls   <<< list session
+# tmux show -g   <<< show current config
+# tmux list-keys <<< show current keys
+# tmux kill-server
+# tmux rename-session -t 0 work
+# tmux attach -t work
+#
 # Make it use C-a, similar to gnu-screen
 unbind C-b
 unbind l
 set -g prefix C-a
+set -g prefix2 ;a
 bind a  send-prefix
 bind C-a last-window
 
@@ -23,6 +32,7 @@ set-window-option -g mode-keys vi
 #set-option -g pane-active-border-bg colour244
 #set-option -g status-utf8 on
 #set-option -g visual-activity on
+set -g word-separators " |-_@"
 
 setw -g mode-mouse on
 #setw -g monitor-activity on
@@ -32,7 +42,7 @@ set -g mouse-select-pane on
 set -g status off
 
 #clear both screen and history
-bind -n C-c send-keys C-l \; run 'tmux clear-history'
+bind -n C-x send-keys C-l \; run 'tmux clear-history'
 
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
