update tmux help

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@
 # tmux kill-server
 # tmux rename-session -t 0 work
 # tmux attach -t work
+# :select-layout tiled|even-*|main-*  <<< * is horizontal|vertical
 #
 # Make it use C-a, similar to gnu-screen
 unbind C-b
