--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,10 @@
 # tmux kill-server
 # tmux rename-session -t 0 work
 # tmux attach -t work
+#
 # :select-layout tiled|even-*|main-*  <<< * is horizontal|vertical
+# :setw synchronize-panes on|off
+# :rename-windows <new-name>
 #
 # Make it use C-a, similar to gnu-screen
 unbind C-b
