add tmux all-panes-cmd ...

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 # Help:
+#
 # tmux ls   <<< list session
 # tmux show -g   <<< show current config
 # tmux list-keys <<< show current keys
@@ -10,7 +11,10 @@
 # :setw synchronize-panes on|off
 # :rename-windows <new-name>
 #
+# all-panes "<command>"   <<< supported by tmux-all-panes.sh
+#
 # Make it use C-a, similar to gnu-screen
+#
 unbind C-b
 unbind l
 set -g prefix C-a
