update gitconfig log

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,11 @@
 [core]
 	excludesfile = ~/.gitignore
 [format]
-	pretty = format:%h %ad %8.8s(%an)
+	pretty = format:%h %ad %s(%an)
 [log]
 	date = short
 [github]
 	user = huawenyu
+[alias]
+	log1 = log --graph --abbrev-commit --decorate --date=short --format=format:'%C(bold blue)%h%C(reset) %ad %C(white)%s%C(reset) %C(dim white)%C(cyan)(%an)%C(reset)%C(reset)%C(bold yellow)%d%C(reset)' --all
+	log2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
