--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ set -sg escape-time 0
 set -g wrap-search off
 set -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
-#set -g default-terminal "xterm"
+set -g default-terminal "xterm"
 set -g status-keys vi
 set -g history-limit 8000
 setw -g mode-keys vi
