--- a/.vrapperrc
+++ b/.vrapperrc
@@ -158,6 +158,7 @@ set cleanindent
 set contentassistmode
 set gvimpath=/usr/local/bin/mvim
 
-source .vrapperrc.local
+" Wilson
+"source .vrapperrc.local
 
 " vim: ft=vim
