--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,8 @@ bind -n M-9 select-pane -t 9
 # disable
 #set-window-option -g automatic-rename off
 #set-option -g allow-rename off
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
 
 # Turn on window titles
 set -g set-titles on
