--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,15 @@
+####################################################
 # Help:
 #
 # tmux ls   <<< list session
 # tmux show -g   <<< show current config
 # tmux list-keys <<< show current keys
-# tmux kill-server
+# tmux kill-server -t <tab>
+# tmux killp -t <tab>
 # tmux rename-session -t 0 work
 # tmux attach -t work
 #
+# :source ~/.tmux.conf
 # :select-layout tiled|even-*|main-*  <<< * is horizontal|vertical
 # :setw synchronize-panes on|off
 # :rename-windows <new-name>
@@ -14,42 +17,109 @@
 # all-panes "<command>"   <<< supported by tmux-all-panes.sh
 #
 # Make it use C-a, similar to gnu-screen
-#
+####################################################
+set -g default-terminal "screen-256color"
+
 unbind C-b
 unbind l
 set -g prefix C-a
 bind a  send-prefix
 bind C-a last-window
 
-set -g renumber-windows on
 # 0 is too far from ` ;)
-set-option -g base-index 1
+set -g renumber-windows on
+set -g base-index 1
 setw -g pane-base-index 1
+
 #Allows for faster key repetition
 set -sg escape-time 0
 set -g wrap-search off
 set -g default-shell /bin/zsh
-set -g default-terminal "screen-256color"
-set -g default-terminal "xterm"
-set -g status-keys vi
 set -g history-limit 8000
-setw -g mode-keys vi
-set-window-option -g mode-keys vi
-#set-option -g display-time 2000
-#set-option -g pane-active-border-bg colour244
-#set-option -g status-utf8 on
-#set-option -g visual-activity on
+set -g display-time 2000
+#set -g pane-active-border-bg colour244
+set -g visual-activity on
 set -g word-separators " |-_@"
+setw -g mode-keys vi
 
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+set -g bell-action none
+setw -g monitor-activity off
+
+####################################################
+# Mouse
 setw -g mode-mouse on
-#setw -g monitor-activity on
 #set -g mouse-resize-pane on
 set -g mouse-select-pane on
-#set -g mouse-select-window on
-set -g status off
+set -g mouse-select-window on
+####################################################
 
-#clear both screen and history
-bind -n C-x send-keys C-l \; run 'tmux clear-history'
+####################################################
+# set status bar
+set -g status on
+set -g status-utf8 on
+set -g status-bg colour235 #base02
+set -g status-fg colour136 #yellow
+set -g status-attr default
+set -g status-position top
+set -g status-attr dim
+#set -g status-keys vi
+#set -g status-interval 1
+set -g status-justify centre # center align window list
+#set -g status-left-length 20
+set -g status-right-length 40
+
+#set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-left ''
+set -g status-right '#[fg=white,bg=default]%a %l:%M %p %Y-%m-%d'
+####################################################
+
+####################################################
+#  Theme & Colors
+
+# default window title colors
+setw -g window-status-fg colour244 #base0
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+# active window title colors
+setw -g window-status-current-fg colour166 #orange
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
+
+# message text
+set -g message-bg colour235 #base02
+set -g message-fg colour166 #orange
+####################################################
+
+####################################################
+# set terminal title
+set -g set-titles off
+set -g allow-rename off
+setw -g automatic-rename off
+
+## Set window title string
+##  #H  Hostname of local host
+##  #I  Current window index
+##  #P  Current pane index
+##  #S  Session name
+##  #T  Current window title
+##  #W  Current window name
+##  #   A literal ‘#’
+#setw -g automatic-rename
+#set -g set-titles-string '#S:#I.#P #W'
+####################################################
+
+
+####################################################
+# Smart pane switching with awareness of vim splits
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
@@ -74,60 +144,13 @@ bind -n M-7 select-pane -t 7
 bind -n M-8 select-pane -t 8
 bind -n M-9 select-pane -t 9
 
-####################################################
-# set terminal title
-# disable
-#set-window-option -g automatic-rename off
-#set-option -g allow-rename off
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
-
-# Turn on window titles
-set -g set-titles on
-
-# Set window title string
-#  #H  Hostname of local host
-#  #I  Current window index
-#  #P  Current pane index
-#  #S  Session name
-#  #T  Current window title
-#  #W  Current window name
-#  #   A literal ‘#’
-set -g set-titles-string '#S:#I.#P #W'
-
-# Automatically set window title
-setw -g automatic-rename
-####################################################
-
-####################################################
-# Smart pane switching with awareness of vim splits
-# select-pane like vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-### Use Alt-vim keys without prefix key to switch panes
-##bind -n M-h select-pane -L
-##bind -n M-j select-pane -D
-##bind -n M-k select-pane -U
-##bind -n M-l select-pane -R
-#
-## If vim
-##bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-h) || tmux select-pane -L"
-##bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-j) || tmux select-pane -D"
-##bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-k) || tmux select-pane -U"
-##bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys C-l) || tmux select-pane -R"
-##bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq -e '^vim$' -e '^gvim$' -e '^vimdiff$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-## If neovim
-#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)(n)?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-####################################################
+#clear both screen and history
+bind -n C-x send-keys C-l \; run 'tmux clear-history'
 
 unbind p
+
+####################################################
+# Plug Manager
 
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 #run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
@@ -150,11 +173,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
