--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,6 +49,9 @@ set -g visual-silence off
 set -g bell-action none
 setw -g monitor-activity off
 
+# Sane scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 ####################################################
 # Mouse
 setw -g mode-mouse on
