script auto commit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@
 # Make it use C-a, similar to gnu-screen
 ####################################################
 set -g default-terminal "screen-256color"
+setw -g xterm-keys on # stop zsh's bindkey when using tmux
 
 unbind C-b
 unbind l
