script auto commit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ unbind l
 set -g prefix C-a
 bind a  send-prefix
 bind C-a last-window
+unbind r
+bind r source-file ~/.tmux.conf # force a reload of the config file
 
 # 0 is too far from ` ;)
 set -g renumber-windows on
