update Xxterm: support unicode chinese

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,8 @@
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+setw -g utf8 on
 setw -g xterm-keys on # stop zsh's bindkey when using tmux
 
 unbind C-b
@@ -54,7 +55,7 @@ setw -g monitor-activity off
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
+set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 ####################################################
 # Mouse
 setw -g mode-mouse on
@@ -85,6 +86,11 @@ set -g status-right '#[fg=white,bg=default]%a %l:%M %p %Y-%m-%d'
 
 ####################################################
 #  Theme & Colors
+
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
 
 # default window title colors
 setw -g window-status-fg colour244 #base0
