--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 setw -g utf8 on
 setw -g xterm-keys on # stop zsh's bindkey when using tmux
 
