--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,13 +14,26 @@
 # :setw synchronize-panes on|off
 # :rename-windows <new-name>
 #
+# Shortkeys:
+#   <leader>r              <<< reload tmux.conf
+#   <leader>,              <<< rename-windows
+#   <leader>x              <<< kill current pane
+#   <leader>Alt+1,2,3,4    <<< select-layout
+#           x              <<< clear all
+#           Alt+m          <<< toggle pane maximize
+#           Alt+1~6        <<< select tmux windows
+#           Alt+0,9~7      <<< select vim's tabs: 1gt, 2gt, 3gt, 4gt
+#           Ctl+Arrow      <<< Left,Right: vim tabs
+#           Ctl+Arrow      <<< Up, Down: tmux windows
+#
 # all-panes "<command>"   <<< supported by tmux-all-panes.sh
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
 set -g default-terminal "screen-256color"
 setw -g utf8 on
-setw -g xterm-keys on # stop zsh's bindkey when using tmux
+set -gw xterm-keys on # stop shell bindkey when using tmux
+setw -g xterm-keys on # stop shell bindkey when using tmux
 
 unbind C-b
 unbind l
@@ -28,7 +41,7 @@ set -g prefix C-a
 bind a  send-prefix
 bind C-a last-window
 unbind r
-bind r source-file ~/.tmux.conf # force a reload of the config file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # 0 is too far from ` ;)
 set -g renumber-windows on
@@ -133,58 +146,78 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+#bind -n C-h    select-pane -L
+#bind -n C-j    select-pane -D
+#bind -n C-k    select-pane -U
+#bind -n C-l    select-pane -R
+
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \
+
 # Should diable gnu-terminal's shortkey Alt+num
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n M-h     select-pane -L
+bind -n M-j     select-pane -D
+bind -n M-k     select-pane -U
+bind -n M-l     select-pane -R
 
-#bind -n C-h select-pane -L
-#bind -n C-j select-pane -D
-#bind -n C-k select-pane -U
-#bind -n C-l select-pane -R
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left  select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up    select-pane -U
+bind -n M-Down  select-pane -D
 
-bind -n M-1 select-pane -t 1
-bind -n M-2 select-pane -t 2
-bind -n M-3 select-pane -t 3
-bind -n M-4 select-pane -t 4
-bind -n M-5 select-pane -t 5
-bind -n M-6 select-pane -t 6
-bind -n M-7 select-pane -t 7
-bind -n M-8 select-pane -t 8
-bind -n M-9 select-pane -t 9
+bind -n C-Left  send-keys -l gT
+bind -n C-Right send-keys -l gt
+bind -n C-Up    previous-window
+bind -n C-Down  next-window
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+bind -n M-1     select-window -t 1
+bind -n M-2     select-window -t 2
+bind -n M-3     select-window -t 3
+bind -n M-4     select-window -t 4
+bind -n M-5     select-window -t 5
+bind -n M-6     select-window -t 6
+
+bind -n M-0     send-keys -l 1gt
+bind -n M-9     send-keys -l 2gt
+bind -n M-8     send-keys -l 3gt
+bind -n M-7     send-keys -l 4gt
 
 #clear both screen and history
-bind -n C-x send-keys C-l \; run 'tmux clear-history'
+bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; display 'Clear All!'
 
 unbind p
 
-####################################################
-# Plug Manager
-
-#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-#run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
-set -g @continuum-restore 'on'
-
-# Install
-# 1. git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# 2. Add the following into the bottom of our tmux.conf
-# 3. tmux kill-server
-# 4. tmux source ~/.tmux.conf
-# 5. Hit prefix + I (I as in Install) to fetch the plugin
+#####################################################
+#####################################################
+## Plug Manager
 #
-# Keys:
-# prefix + I          <<< install
-# prefix + U          <<< update
-# prefix + alt + u    <<< remove the deleted plugins
+##run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+##run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
+#set -g @continuum-restore 'on'
 #
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+## Install
+## 1. git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+## 2. Add the following into the bottom of our tmux.conf
+## 3. tmux kill-server
+## 4. tmux source ~/.tmux.conf
+## 5. Hit prefix + I (I as in Install) to fetch the plugin
+##
+## Keys:
+## prefix + I          <<< install
+## prefix + U          <<< update
+## prefix + alt + u    <<< remove the deleted plugins
+##
+## List of plugins
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#
+## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+#run '~/.tmux/plugins/tpm/tpm'
+#####################################################
