--- a/.tmux.conf
+++ b/.tmux.conf
@@ -166,8 +166,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up    select-pane -U
 bind -n M-Down  select-pane -D
 
-bind -n C-Left  send-keys -l gT
-bind -n C-Right send-keys -l gt
+bind -n C-Left  send-keys Escape \; send-keys -l gT
+bind -n C-Right send-keys Escape \; send-keys -l gt
 bind -n C-Up    previous-window
 bind -n C-Down  next-window
 
@@ -182,10 +182,10 @@ bind -n M-4     select-window -t 4
 bind -n M-5     select-window -t 5
 bind -n M-6     select-window -t 6
 
-bind -n M-0     send-keys -l 1gt
-bind -n M-9     send-keys -l 2gt
-bind -n M-8     send-keys -l 3gt
-bind -n M-7     send-keys -l 4gt
+bind -n M-0     send-keys Escape \; send-keys -l 1gt
+bind -n M-9     send-keys Escape \; send-keys -l 2gt
+bind -n M-8     send-keys Escape \; send-keys -l 3gt
+bind -n M-7     send-keys Escape \; send-keys -l 4gt
 
 #clear both screen and history
 bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; display 'Clear All!'
