--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ set -g prefix C-a
 bind a  send-prefix
 bind C-a last-window
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reload!"
 
 # 0 is too far from ` ;)
 set -g renumber-windows on
@@ -152,7 +152,8 @@ bind l select-pane -R
 #bind -n C-l    select-pane -R
 
 #maximizing and restoring panes.
-bind -n M-m resize-pane -Z \
+bind -n M-m resize-pane -Z \;
+#bind -n M-m run-shell "if [[ `tmux show-messages | tail -1 | grep maximize` ]]; then toggle=off; else export toggle=on; fi; tmux display-message \"\$toggle\"; tmux display-message \"\$toggle\"; &> /dev/null"
 
 # Should diable gnu-terminal's shortkey Alt+num
 bind -n M-h     select-pane -L
