--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ set -sg escape-time 0
 set -g wrap-search off
 set -g default-shell /bin/zsh
 set -g history-limit 8000
-set -g display-time 2000
+set -g display-time 1000
 #set -g pane-active-border-bg colour244
 set -g visual-activity on
 set -g word-separators " |-_@"
@@ -153,7 +153,6 @@ bind l select-pane -R
 
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \;
-#bind -n M-m run-shell "if [[ `tmux show-messages | tail -1 | grep maximize` ]]; then toggle=off; else export toggle=on; fi; tmux display-message \"\$toggle\"; tmux display-message \"\$toggle\"; &> /dev/null"
 
 # Should diable gnu-terminal's shortkey Alt+num
 bind -n M-h     select-pane -L
@@ -190,6 +189,7 @@ bind -n M-7     send-keys Escape \; send-keys -l 4gt
 
 #clear both screen and history
 bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; display 'Clear All!'
+#bind -n C-x run-shell "tmux show-messages | tail -1 | grep -q on; if [[ \$? == 0 ]]; then export toggle=off; echo true; else export toggle=on; echo false; fi; tmux display-message \$toggle &> /dev/null;;"
 
 unbind p
 
