update vimrc: status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,7 @@
 #   <leader>Alt+1,2,3,4    <<< select-layout
 #           x              <<< clear all
 #           Alt+m          <<< toggle pane maximize
-#           Alt+1~6        <<< select tmux windows
-#           Alt+0,9~7      <<< select vim's tabs: 1gt, 2gt, 3gt, 4gt
+#           Alt+1~9        <<< select tmux windows
 #           Ctl+Arrow      <<< Left,Right: vim tabs
 #           Ctl+Arrow      <<< Up, Down: tmux windows
 #
@@ -181,11 +180,15 @@ bind -n M-3     select-window -t 3
 bind -n M-4     select-window -t 4
 bind -n M-5     select-window -t 5
 bind -n M-6     select-window -t 6
+bind -n M-7     select-window -t 7
+bind -n M-8     select-window -t 8
+bind -n M-9     select-window -t 9
+bind -n M-0     select-window -t 10
 
-bind -n M-7     send-keys Escape \; send-keys -l 1gt
-bind -n M-8     send-keys Escape \; send-keys -l 2gt
-bind -n M-9     send-keys Escape \; send-keys -l 3gt
-bind -n M-0     send-keys Escape \; send-keys -l 4gt
+#bind -n M-7     send-keys Escape \; send-keys -l 1gt
+#bind -n M-8     send-keys Escape \; send-keys -l 2gt
+#bind -n M-9     send-keys Escape \; send-keys -l 3gt
+#bind -n M-0     send-keys Escape \; send-keys -l 4gt
 
 #clear both screen and history
 bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; display 'Clear All!'
