update tmux.conf: not display Clear All.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -191,7 +191,7 @@ bind -n M-0     select-window -t 10
 #bind -n M-0     send-keys Escape \; send-keys -l 4gt
 
 #clear both screen and history
-bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; display 'Clear All!'
+bind -n C-x     send-keys C-l \; run 'tmux clear-history' \;
 #bind -n C-x run-shell "tmux show-messages | tail -1 | grep -q on; if [[ \$? == 0 ]]; then export toggle=off; echo true; else export toggle=on; echo false; fi; tmux display-message \$toggle &> /dev/null;;"
 
 unbind p
