update tmux.conf: rm C-Arrow maps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -165,10 +165,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up    select-pane -U
 bind -n M-Down  select-pane -D
 
-bind -n C-Left  send-keys Escape \; send-keys -l gT
-bind -n C-Right send-keys Escape \; send-keys -l gt
-bind -n C-Up    previous-window
-bind -n C-Down  next-window
+#bind -n C-Left  send-keys Escape \; send-keys -l gT
+#bind -n C-Right send-keys Escape \; send-keys -l gt
+#bind -n C-Up    previous-window
+#bind -n C-Down  next-window
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
