update tmux.conf: first remove all bindkey

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,8 @@ setw -g utf8 on
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
 
+unbind-key -a
+
 unbind C-b
 unbind l
 set -g prefix C-a
