--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,7 @@ set -g default-terminal "screen-256color"
 setw -g utf8 on
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
-
-unbind-key -a
+#unbind-key -a        # will unbind the all default key bind
 
 unbind C-b
 unbind l
@@ -52,7 +51,7 @@ setw -g pane-base-index 1
 #Allows for faster key repetition
 set -sg escape-time 0
 set -g wrap-search off
-set -g default-shell /bin/zsh
+#set -g default-shell /bin/zsh
 set -g history-limit 8000
 set -g display-time 1000
 #set -g pane-active-border-bg colour244
