--- a/.tmux.conf
+++ b/.tmux.conf
@@ -172,8 +172,8 @@ bind -n M-Down  select-pane -D
 #bind -n C-Down  next-window
 
 # Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+#bind -n S-Left  previous-window
+#bind -n S-Right next-window
 
 bind -n M-1     select-window -t 1
 bind -n M-2     select-window -t 2
