--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,9 @@
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
+#set -g default-terminal "screen-256color"
 set -g default-terminal "screen-256color"
+
 setw -g utf8 on
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
@@ -49,7 +51,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 #Allows for faster key repetition
-set -sg escape-time 0
+set -g escape-time 10
 set -g wrap-search off
 #set -g default-shell /bin/zsh
 set -g history-limit 8000
