script auto commit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -204,6 +204,9 @@ bind -n C-x     send-keys C-l \; run 'tmux clear-history' \;
 bind-key y capture-pane -S -200 \; save-buffer '/tmp/vim.yank' \; delete-buffer \; display 'Save last 200 to /tmp/vim.yank' \;
 #bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
+bind-key H pipe-pane 'cat > $HOME/tmuxlog/tmux-#W.log' \; display-message 'Started logging to $HOME/tmuxlog/tmux-#W.log'
+bind-key h pipe-pane \; display-message 'Ended logging to $HOME/tmuxlog/tmux-#W.log'
+
 unbind p
 
 #####################################################
