--- a/.tmux.conf
+++ b/.tmux.conf
@@ -182,6 +182,8 @@ bind -n M-Down  send-keys C-w \; send-keys -l -
 # Shift arrow to switch windows
 #bind -n S-Left  previous-window
 #bind -n S-Right next-window
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 bind -n M-1     select-window -t 1
 bind -n M-2     select-window -t 2
