--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,12 +82,17 @@ set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 #set -g mouse-resize-pane on
 #set -g mouse-select-pane on
 #set -g mouse-select-window on
-if-shell "[[ `tmux -V` == *1.9 ]]" \
-    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on;'
-if-shell "[[ `tmux -V` == *2.0 ]]" \
-    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on;'
-if-shell "[[ `tmux -V` == *2.1 ]]" \
-    'set -g mouse on'
+#if-shell "[[ `tmux -V` == *1.9 ]]" \
+#    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V1.9"'
+#if-shell "[[ `tmux -V` == *2.0 ]]" \
+#    setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V2.1"
+#if-shell "[[ `tmux -V` == *2.1 ]]" \
+#    'set -g mouse on; display "V2.1"'
+
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
+    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V2.0"'
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi" \
+    'set -g mouse on; set -g mouse-utf8 on; display "V2.1"'
 ####################################################
 
 ####################################################
