--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,23 +76,22 @@ setw -g monitor-activity off
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 ####################################################
-# Mouse
-#set -g mouse on
-#setw -g mode-mouse on
-#set -g mouse-resize-pane on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
-#if-shell "[[ `tmux -V` == *1.9 ]]" \
-#    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V1.9"'
-#if-shell "[[ `tmux -V` == *2.0 ]]" \
-#    setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V2.1"
-#if-shell "[[ `tmux -V` == *2.1 ]]" \
-#    'set -g mouse on; display "V2.1"'
+# Version-specific commands [grumble, grumble]
+# See: https://github.com/tmux/tmux/blob/master/CHANGES
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
-if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
-    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; display "V2.0"'
-if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1 ]]; then true; else false; fi" \
-    'set -g mouse on; set -g mouse-utf8 on; display "V2.1"'
+# Mouse
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+  "set -g mouse-select-pane on; set -g mode-mouse on; \
+    set -g mouse-resize-pane on; set -g mouse-select-window on"
+
+# In version 2.1 "mouse" replaced the previous 4 mouse options
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+  "set -g mouse on"
+
+# UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+  "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 ####################################################
 
 ####################################################
