update vimrc: neosnippets, copy-vim-tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,7 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # loud or quiet?
+set -g focus-events on
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
