update tmux.conf: copy & paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,8 +61,11 @@ setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind-key -t vi-copy y copy-pipe "xclip"
+bind-key ] run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 
 # loud or quiet?
 set -g focus-events off
@@ -227,32 +230,3 @@ bind-key C-d pipe-pane -o '~/.tmux-pipe-rdb' \; display-message 'Pipe to $HOME/.
 
 unbind p
 
-#####################################################
-#####################################################
-## Plug Manager
-#
-##run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-##run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
-#set -g @continuum-restore 'on'
-#
-## Install
-## 1. git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-## 2. Add the following into the bottom of our tmux.conf
-## 3. tmux kill-server
-## 4. tmux source ~/.tmux.conf
-## 5. Hit prefix + I (I as in Install) to fetch the plugin
-##
-## Keys:
-## prefix + I          <<< install
-## prefix + U          <<< update
-## prefix + alt + u    <<< remove the deleted plugins
-##
-## List of plugins
-#set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @plugin 'tmux-plugins/tmux-copycat'
-#
-## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-#run '~/.tmux/plugins/tpm/tpm'
-#####################################################
