improve neovim-fuzzy: find file/function/symbol

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g default-terminal "screen-256color"
 
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
-#unbind-key -a        # will unbind the all default key bind
+#unbind-key -a        # will unbind the all default key bind, but also remove our control key
 
 unbind C-b
 unbind l
@@ -61,11 +61,11 @@ setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
-#bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'v' begin-selection
 #bind-key -t vi-copy 'y' copy-selection
-#bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
-bind-key -t vi-copy y copy-pipe "xclip"
-bind-key ] run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind-key -t vi-copy y copy-pipe "xclip"
+bind-key ] run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
 
 # loud or quiet?
 set -g focus-events off
@@ -171,8 +171,8 @@ bind -n M-m resize-pane -Z \;
 #bind -n M-i     send-keys C-i
 #bind -n M-n     send-keys C-n
 #bind -n M-p     send-keys C-p
-bind -n M-[     send-keys C-[
-bind -n M-]     send-keys C-]
+#bind -n M-[     send-keys C-[
+#bind -n M-]     send-keys C-]
 
 bind -n M-h     select-pane -L
 bind -n M-j     select-pane -D
