--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,8 @@
 ####################################################
 set -g default-terminal "screen-256color"
 #set -g default-terminal "screen-256color-bce"
+setw -g c0-change-trigger 10
+setw -g c0-change-interval 250
 
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
