--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ setw -g pane-base-index 1
 set -g escape-time 10
 set -g wrap-search off
 #set -g default-shell /bin/zsh
-set -g history-limit 8000
+set -g history-limit 20000
 set -g display-time 1000
 #set -g pane-active-border-bg colour244
 set -g visual-activity on
@@ -61,7 +61,7 @@ setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
-# Disable mouse click cause exit select-mode
+# Disable mouse left-click cause exit copy-mode
 bind -Tcopy-mode MouseDrag1Pane setw @mode 1\; copy-mode -M
 bind -Tcopy-mode MouseDragEnd1Pane if -F '#{@mode}' 'send -X copy-selection' 'send -X copy-selection-and-cancel'
 bind -n MouseDrag1Pane if -F '#{mouse_any_flag}' 'if -F "#{pane_in_mode}" "setw -u @mode; copy-mode -M" "send-keys -M"' "setw -u @mode; copy-mode -M"
@@ -232,4 +232,26 @@ bind-key h pipe-pane \; display-message 'Ended logging to $HOME/tmuxlog/tmux-#W.
 bind-key C-d pipe-pane -o '~/.tmux-pipe-rdb' \; display-message 'Pipe to $HOME/.tmux-pipe-rdb'
 
 unbind p
+
+# List of plugins
+
+# Install Plugins: prefix + I/U (update)
+set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# Save log to HOME
+# Capture Start: prefix + alt + p
+# Capture Stop: prefix + alt + c
+# Capture Whole: prefix + alt + shift + p
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
