add expect script: script/mytel.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -188,10 +188,19 @@ bind -n M-l     select-pane -R
 #bind -n C-l    select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left  send-keys C-w \; send-keys -l >
-bind -n M-Right send-keys C-w \; send-keys -l <
-bind -n M-Up    send-keys C-w \; send-keys -l +
-bind -n M-Down  send-keys C-w \; send-keys -l -
+#bind -n M-Left  send-keys C-w \; send-keys -l >
+#bind -n M-Right send-keys C-w \; send-keys -l <
+#bind -n M-Up    send-keys C-w \; send-keys -l +
+#bind -n M-Down  send-keys C-w \; send-keys -l -
+
+bind -n M-Left  send-keys C-w \; send-keys h
+bind -n M-Right send-keys C-w \; send-keys l
+bind -n M-Up    send-keys C-w \; send-keys k
+bind -n M-Down  send-keys C-w \; send-keys j
+bind -n S-h     send-keys C-w \; send-keys h
+bind -n S-j     send-keys C-w \; send-keys j
+bind -n S-k     send-keys C-w \; send-keys k
+bind -n S-l     send-keys C-w \; send-keys l
 
 #bind -n C-Left  send-keys Escape \; send-keys -l gT
 #bind -n C-Right send-keys Escape \; send-keys -l gt
