update dotfile: tmux.conf, add session restore plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -244,17 +244,24 @@ unbind p
 
 # List of plugins
 
-# Install Plugins: prefix + I/U (update)
+## Install Plugins: prefix + I/U (update)
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
-# Save log to HOME
+## Save log to HOME
 # Capture Start: prefix + alt + p
 # Capture Stop: prefix + alt + c
 # Capture Whole: prefix + alt + shift + p
 set -g @plugin 'tmux-plugins/tmux-logging'
+
+## Save/restore session
+# prefix + Ctrl-s - save
+# prefix + Ctrl-r - restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# automatic restore when when computer/server/tmux is turned-on or started
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
