update dotwiki.script.tcl: add samples

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,8 @@
 	log2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
 [credential]
 	helper = cache --timeout 3600
+[pack]
+	windowMemory = 100m
+	SizeLimit = 100m
+	threads = 1
+	window = 0
