update tmux.conf: mouse release not exit copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,8 +66,11 @@ setw -g mode-keys vi
 #bind -Tcopy-mode MouseDragEnd1Pane if -F '#{@mode}' 'send -X copy-selection' 'send -X copy-selection-and-cancel'
 #bind -n MouseDrag1Pane if -F '#{mouse_any_flag}' 'if -F "#{pane_in_mode}" "setw -u @mode; copy-mode -M" "send-keys -M"' "setw -u @mode; copy-mode -M"
 
-bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind-key -t vi-copy 'v' begin-selection
+# [Disable tmux mouse copy-mode jumps to bottom on tmux](https://github.com/tmux/tmux/issues/935)
+#bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
+unbind -t vi-copy MouseDragEnd1Pane
 bind-key ] run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
 
 # loud or quiet?
@@ -156,6 +159,12 @@ setw -g automatic-rename off
 ##  #   A literal ‘#’
 #setw -g automatic-rename
 #set -g set-titles-string '#S:#I.#P #W'
+####################################################
+
+
+####################################################
+# Mouse & copy-mode
+set -g @scroll-down-exit-copy-mode "off"
 ####################################################
 
 
@@ -262,6 +271,7 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # automatic restore when when computer/server/tmux is turned-on or started
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
