update vimrc: always show sign column

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -270,7 +270,8 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 # prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # automatic restore when when computer/server/tmux is turned-on or started
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# cons: cause screen flash
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Other examples:
