update wiki & tmux.conf(ver > 2.4)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,11 @@
 #           Ctl+Arrow      <<< Left,Right: vim tabs
 #           Ctl+Arrow      <<< Up, Down: tmux windows
 #
+#   Feature Log:           tmux-plugins/tmux-logging
+#      prefix + alt + p           Save visible text
+#      prefix + alt + shift + p   Save complete history
+#      prefix + shift + p         Toggle (start/stop) logging in the current pane.
+#
 # all-panes "<command>"   <<< supported by tmux-all-panes.sh
 #
 # Make it use C-a, similar to gnu-screen
@@ -66,11 +71,25 @@ setw -g mode-keys vi
 #bind -Tcopy-mode MouseDragEnd1Pane if -F '#{@mode}' 'send -X copy-selection' 'send -X copy-selection-and-cancel'
 #bind -n MouseDrag1Pane if -F '#{mouse_any_flag}' 'if -F "#{pane_in_mode}" "setw -u @mode; copy-mode -M" "send-keys -M"' "setw -u @mode; copy-mode -M"
 
-bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
-bind-key -t vi-copy 'v' begin-selection
-# [Disable tmux mouse copy-mode jumps to bottom on tmux](https://github.com/tmux/tmux/issues/935)
-#bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
-unbind -t vi-copy MouseDragEnd1Pane
+# Vi mode copy
+## v2.3
+#bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind-key -t vi-copy 'v' begin-selection
+## [Disable tmux mouse copy-mode jumps to bottom on tmux](https://github.com/tmux/tmux/issues/935)
+##bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
+#unbind -t vi-copy MouseDragEnd1Pane
+## v2.4
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
+#bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
+unbind-key -Tcopy-mode-vi MouseDragEnd1Pane
+
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
+
 bind-key ] run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
 
 # loud or quiet?
@@ -269,9 +288,12 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 # prefix + Ctrl-s - save
 # prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 # automatic restore when when computer/server/tmux is turned-on or started
 # cons: cause screen flash
-#set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Other examples:
