update wiki & tmux.conf(ver > 2.4)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,7 +83,8 @@ bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
 #bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
 #bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-bind-key -Tcopy-mode-vi Escape send -X cancel
+#bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi Escape send -X clear-selection
 bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 unbind-key -Tcopy-mode-vi MouseDragEnd1Pane
 
