--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,8 @@ setw -g mode-keys vi
 #unbind -t vi-copy MouseDragEnd1Pane
 ## v2.4
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \;
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
 #bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
 #bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 #bind-key -Tcopy-mode-vi Escape send -X cancel
