--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,12 +18,16 @@
 #   <leader>r              <<< reload tmux.conf
 #   <leader>,              <<< rename-windows
 #   <leader>x              <<< kill current pane
-#   <leader>Alt+1,2,3,4    <<< select-layout
-#           x              <<< clear all
-#           Alt+m          <<< toggle pane maximize
-#           Alt+1~9        <<< select tmux windows
-#           Ctl+Arrow      <<< Left,Right: vim tabs
-#           Ctl+Arrow      <<< Up, Down: tmux windows
+#   <leader>Alt+1,2,3,4,5  <<< select-preset-layout
+#           Space          <<< select next layout
+#           {,}            <<< swap current pane to Left, Right
+#           x              <<< kill current pane
+#   Ctl+x                  <<< clear all
+#   Alt+m                  <<< toggle pane maximize
+#   Alt+1~9                <<< select tmux windows
+#   Ctl+Arrow              <<< jump between vim windows
+#   Alt+Arrow              <<< jump between tmux panes
+#   Ctl+Shift+Left,Right   <<< move tmux windows next/previous
 #
 #   Feature Log:           tmux-plugins/tmux-logging
 #      prefix + alt + p           Save visible text
