dotwiki: add config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,10 @@
 #   Alt+1~9                <<< select tmux windows
 #   Ctl+Arrow              <<< jump between vim windows
 #   Alt+Arrow              <<< jump between tmux panes
+
 #   Ctl+Shift+Left,Right   <<< move tmux windows next/previous
+#    :swap-window -t 0      <<< swap the current window with the top window
+#    :swap-window -s 3 -t 1 <<< swap these two windows
 #
 #   Feature Log:           tmux-plugins/tmux-logging
 #      prefix + alt + p           Save visible text
