dotwiki: add config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,10 @@
 # all-panes "<command>"   <<< supported by tmux-all-panes.sh
 #
 # Howtos:
-#      prefix + SHIFT-D    redraw tmux window when switching smaller monitor to bigger one: to choose which client you want to detach from the session.
+#   Force resize window because multiple clients:
+#      1. prefix + SHIFT-D    redraw tmux window when switching smaller monitor to bigger one: to choose which client you want to detach from the session.
+#      2. tmux list-client
+#         tmux detach-client -s 0
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
@@ -90,8 +93,8 @@ setw -g mode-keys vi
 #unbind -t vi-copy MouseDragEnd1Pane
 ## v2.4
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \;
-#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
+#bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \;
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -sel clip -i" \; display-message 'Copied'
 #bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
 #bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 #bind-key -Tcopy-mode-vi Escape send -X cancel
