dotwiki: add config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -273,7 +273,7 @@ bind -n M-0     select-window -t 10
 #bind -n M-0     send-keys Escape \; send-keys -l 4gt
 
 #clear both screen and history
-bind -n C-x     send-keys C-l \; run 'tmux clear-history' \;
+bind -n C-x     send-keys C-l \; run 'tmux clear-history' \; run 'rm -fr tmux-history*' \;
 #bind -n C-x run-shell "tmux show-messages | tail -1 | grep -q on; if [[ \$? == 0 ]]; then export toggle=off; echo true; else export toggle=on; echo false; fi; tmux display-message \$toggle &> /dev/null;;"
 bind-key y capture-pane -S -200 \; save-buffer '/tmp/vim.yank' \; delete-buffer \; display 'Save last 200 to /tmp/vim.yank' \;
 #bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
