update zshrc, vimrc, wiki

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,10 +15,17 @@
 # :rename-windows <new-name>
 #
 # Shortkeys:
+#   <leader>?              <<< List keys bind
 #   <leader>r              <<< reload tmux.conf
+#   <leader>Ctrl-s         <<< save session
+#   <leader>Ctrl-r         <<< restore session
+#
+#   <leader>$              <<< rename-session
 #   <leader>,              <<< rename-windows
 #   <leader>x              <<< kill current pane
+#
 #   <leader>Alt+1,2,3,4,5  <<< select-preset-layout
+#           Ctl+o          <<< rotate panes in current windows
 #           Space          <<< select next layout
 #           {,}            <<< swap current pane to Left, Right
 #           x              <<< kill current pane
