--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@
 #   Alt+Arrow              <<< jump between tmux panes
 
 #   Ctl+Shift+Left,Right   <<< move tmux windows next/previous
-#    :swap-window -t 0      <<< swap the current window with the top window
+#    :swap-window -t 1      <<< swap the current win to 1st if the win-index start from 1
 #    :swap-window -s 3 -t 1 <<< swap these two windows
 #
 #   Feature Log:           tmux-plugins/tmux-logging
